# specd

./: .gitignore  CLAUDE.md  README.md  project.md  prompt-working-copy.specd.md  pyproject.toml
editor/vscode/: .vscodeignore  README.md  language-configuration.json  package-lock.json  package.json  specd-md-0.1.0.vsix  tsconfig.json
editor/vscode/src/: extension.ts
oldtests/: test_cli.py  test_parser_registry.py  test_python_parser.py  test_render.py
oldtests/live_samples/: README.md  conftest.py
policies/: spec-writing-policy.md  test-writing-policy.md
resources/: spec-implementation-policy.md  spec-writing-policy.md  specd-orientation.md  test-writing-policy.md
specs/templates/: parsers.specd.md  render.specd.md  resources.specd.md  validate.specd.md
src/specd/: __main__.py  _policies.py  _resources.py  cli.py  config.py  render.py  validate.py
src/specd.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: README.md  test_cli.py  test_config.py  test_javascript_parser.py  test_js_discovery.py  test_parser_compliance.py  test_policies.py  test_python_discovery.py  test_render.py  test_validate.py  test_validate_cli.py
tests/live_samples/: pyproject.toml
tests/policies/: test_policies.py
tests/render/: test_render_behaviour.py  test_render_cli.py  test_render_help.py  test_render_watch.py  test_template_discovery.py
tests/specs/: demo.spec.md
tests/templates/: demo.spec.specd.md
tests/validate/: test_citation_matching.py  test_python_discovery.py  test_spec_discovery.py  test_validate_report.py
(+14 files in other folders)
